deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: review-and-rating-svc
spec:
  selector:
    app: review-and-rating-svc
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
