deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: review-and-rating-svc
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: "review-and-rating-svc.team-a-cluster.localhost"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: review-and-rating-svc
                port:
                  number: 80
